--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
 readme = "README.md"
 packages = [{include = "machine_tools"}]
 
-
 [tool.poetry.dependencies]
 python = "^3.9"
 kivy = "2.3.1"
@@ -15,7 +14,30 @@ black = "^25.1.0"
 isort = "^6.0.1"
 machine-tools = {git = "https://github.com/sad-engineer/machine_tools.git", rev = "postgresql"}
 
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
+include = '\.pyi?$'
+skip-string-normalization = true
+extend-exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 120
