--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "machine-tools-gui-kivi"
-version = "0.0.03"
+version = "0.0.05"
 description = "Пакет для работы с базой данных станков с графической оболочкой"
 authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
 readme = "README.md"
@@ -10,9 +10,7 @@ packages = [{include = "machine_tools"}]
 python = "^3.9"
 kivy = "2.3.1"
 kivymd = "1.2.0"
-black = "^25.1.0"
-isort = "^6.0.1"
-machine-tools = {git = "https://github.com/sad-engineer/machine_tools.git", rev = "postgresql"}
+machine-tools = {git = "https://github.com/sad-engineer/machine_tools.git"}
 
 [build-system]
 requires = ["poetry-core"]
